# toe_aimbot_2023

./: .gitignore  CMakeLists.txt  README.en.md  README.md  common_structs.h  debug.hpp  main.cpp  readme.md
asset/: camera.json  log.txt
camera/: grab_img.cpp  grab_img.hpp
cuda_expand/: CMakeLists.txt  cuda_expand.cuh  postprocess.cu  preprocess.cu
data/: setting copy.json  setting.json
detect/: detect.cpp  detect.hpp
detect/intel_nuc_11/: ov_detect.cpp  ov_detect.hpp
detect/nvidia_orin_nx/: orin_detect.cpp  orin_detect.hpp
detector/: .parse_config.cpp.swp  detector.cpp  detector.h  infer.cpp  parse_config.cpp  settings.json
detector/intel_nuc/: CMakeLists.txt  ov_detect.cpp  ov_detect.h  ov_main.cpp
detector/weights/: 1.txt
determine/: determine.cpp  determine.hpp
general/: general.hpp  toe_json.hpp  toe_structs.hpp
hit/: detect_run.cpp  detect_run.hpp  detector.cpp  detector.hpp  detector_nx.cpp  detector_nx.h  detector_vino.cpp  detector_vino.h
include/: debug.h  get_frame.h  logger.h  serial.h  toe_json.h
serial/: toe_serial.cpp  toe_serial.hpp
src/: get_frame.cpp  main.cpp  serial.cpp
test/: cuda_expend_test.cpp  grab_test.cpp  ov_test.cpp  serial_test.cpp
tools/transfer_onnx/: CMakeLists.txt  trans.cpp
